--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PL'
+- GITenberg
 title: 一枕奇
 url: http://www.gutenberg.org/ebooks/27753
